--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -65,13 +65,13 @@
           }
 
           /*css三角形, css三角形产生器：http://apps.eky.hk/css-triangle-generator/zh-hant*/
-          .css-triangle { width: 0; height: 0; border-style: solid; border-width: 200px 105px 0 105px; border-color: #007bff transparent transparent transparent; }
+          .css-triangle { width: 0; height: 0; border-style: solid dashed dashed dashed; border-width: 200px 105px 0 105px; border-color: #007bff transparent transparent transparent; }
           
           .u_face{ position:relative; padding-top: 30px; width: 60px; margin: 0 auto; cursor:pointer; }
           .u_face img{ width: 60px; height: 60px; display: block; border-radius: 50%;}
-          .u-face-pop { display:none; margin-top: -235px; margin-left:-70px; width:180px; height:130px; background: #ccc; border:2px solid #007bff; position:relative; padding:10px; }
+          .u-face-pop { zoom:1; display:none; margin-top: -235px; margin-left:-70px; width:180px; height:130px; background: #ccc; border:2px solid #007bff; position:relative; padding:10px; }
           .u-face-pop p{ color:#fff; }
-          .u-face-pop .triangle-ico { position:absolute; bottom:-16px; left:88px; width: 0; height: 0; border-style: solid; border-width: 15px 10px 0 10px; border-color: #007bff transparent transparent transparent; }
+          .u-face-pop .triangle-ico { position:absolute; bottom:-16px; left:88px; width: 0; height: 0; border-style: solid dashed dashed dashed; border-width: 15px 10px 0 10px; border-color: #007bff transparent transparent transparent; }
         
           /*文字双击选中默认事件去除*/
           /*IE6-9还没发现相关的CSS属性
