--- a/IESupport.html
+++ b/IESupport.html
@@ -10,12 +10,16 @@
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
       <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
       <!--[if lt IE 7]>
-            <script type="text/javascript" src="lib/pngfix/unitpngfix.js"></script>
+            <script type="text/javascript" src="lib/unitpngfix/unitpngfix.js"></script>
       <![endif]--> 
 
       <!-- 1.3// <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script> -->
+      <!-- IE6 png透明最佳实现库// <script type="text/javascript" src="lib/fixedpng.js"></script> -->
+      <script type="text/javascript" src="utils/client.js"></script>
       <style>
         .png-pos{ background: url('images/icon_user.png') no-repeat; width:63px; height:16px; }
+        .t8_wrap{ margin:20px 0px; width:200px; height:100px; background:#8DD9E7; position: relative; opacity:0.6; filter:alpha(opacity=60); }
+        .t8_ab{ width:20px; height:20px; background:#000; position: absolute; top:-10px; left:20px; }
       </style>
     </heade>
     
@@ -25,22 +29,29 @@
       <div class=""></div>
 
       <div class="png_warp">
-        <img src="images/icon_user.png" alt="test-png" />
-  
+        <img src="images/icon_user.png" alt="test-png" class="png-img"/>
         <!-- 只要出现了 unitPng ，其他没该类名的节点将不处理png图片 -->
         <div class="png-pos unitPng"></div>
-
         <div class="png-pos"></div>
+      </div>
+
+      <div class="t8_wrap">
+        <!-- IE6下 该子节点会被截断 -->
+        <div class="t8_ab"></div>
       </div>
 
       <script>
         // 模拟低版本浏览器 安装虚拟机： virtualbox，然后 将文件放置在模拟服务器中让虚拟机配置host访问（同个网段可以相互访问）
-        // ie developer toobar 只能查看样式，增删类名而已， firebug lite 则可以查看脚本报错情况,但查看某个节点样式不够方便；
+        // ie developer toolbar 查看某节点对应样式比较方便， firebug lite 则方便脚本操作，例如脚本报错，控制台日志，控制台代码执行等；
         // 虚拟机相关教程：http://www.i7086.com/xunijivirtualboxanzhuangwindowscaozuoxitong
         var IEObj = {
           init: function(){
             var This = this;
             this.topFunction();
+            // client是引入 client库后的全局变量
+            // if (client.browser.ie && parseInt(client.browser.ver, 10) < 7 ){
+            //   invokeFixedPng();
+            // }
           },
           topFunction:function(){
             var testTopVal = 2;
@@ -53,17 +64,35 @@
           }
         };
         IEObj.init();
+        // 动态插入unitpngfix.js代码会报错
+        // loadScript("lib/pngfix/unitpngfix.js");
+        // 动态引入脚本
+        function loadScript(url){
+          var script = document.createElement("script");
+          script.type = "text/javascript";
+          script.src = url;
+          document.body.appendChild(script);
+        }
+
+        // 调用fixedpng.js
+        function invokeFixedPng(){
+          DD_belatedPNG.fix(".unitPng");
+        }
 
         // IE兼容日志(IE6 IE7)：
         // 1.低版本浏览器，js数组、对象注意不能有多余的“逗号”；
         // 例如：var aArray = [{'arg1': '1'}, {'arg2': '2'},];  var aObj = {'arg1': '1',}; 别遗漏最后逗号；
         // 2.IE7以下浏览器(主要IE6) 一般标签样式不支持 伪类hover ， 要使在IE5及IE6中也有效，则必须在外面包裹一个a标签且改a标签必须有href属性；
         // 3.IE6 IE7下不太支持 inline-block, 反而对浮动支持较好； http://www.cnblogs.com/leejersey/archive/2012/07/11/2586506.html
+        //   IE6 下 inline-block vertical-align 中不是全文字，则无效；  
         // 4.IE6 下事件处理（参考 utils/base.js   EventUtil ）
         // 5.getAttribute("class") 在IE下可能无法获取正确类名， IE对应的应该为 getAttribute("className")
         // 6.position absolute; 在IE6下无效；
         // 7.IE6下 line-height 对应节点， 如果不是全文字的话（包含图片/input textarea/select等）会无效；
         // 8.IE6下 position:absolute; 如果父节点已经透明显示， 子类超出父节点部分会被隐藏（即使显示优先级 高于任何子节点）；
+        // 9.IE6下 ；css 三角形需注意背景色、border-style, line-height; http://www.cnphp6.com/archives/63736
+        // 10.IE6下 ；margin 设置为负值无效， 父类添加zoom:1, 自身添加position：relative后方有效；
+      
       </script>
 
     </body>
