添加 动态插入脚本测试代码

--- a/IESupport.html
+++ b/IESupport.html
@@ -8,7 +8,7 @@
       </title>
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-      <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
+      <!-- <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script> -->
       <!--[if lt IE 7]>
             <script type="text/javascript" src="lib/unitpngfix/unitpngfix.js"></script>
       <![endif]--> 
