--- a/event.html
+++ b/event.html
@@ -54,6 +54,7 @@
             btn_a.style.display = 'inline';
             btn_a.onClick = click1;
             btn_a.onmousedown = mouseDown1;
+            // 关于 mouseover 与 mouseenter区别：http://www.cnblogs.com/kingwell/archive/2012/09/09/2677258.html
             btn_a.onmouseover = mouseOver1;
             btn_a.onmouseup = mouseUp1;
 
