--- a/utilsTest.html
+++ b/utilsTest.html
@@ -25,7 +25,7 @@
             var COOKIE_URL = 'utils/cookieUtil.js';
             // 动态插入 cookie库脚本，并存储cookie
             insertScript(COOKIE_URL, function(js){
-              CookieUtil2.set('utilsTestCookie', 'xq, xq, sb');
+              CookieUtil.set('utilsTestCookie', 'xq, xq, sb');
             });
           }
         }; 
