--- a/IESupport.html
+++ b/IESupport.html
@@ -64,6 +64,8 @@
           }
         };
         IEObj.init();
+        // IE6下报错， console对象不存在
+        // console.log('xxxxx');
 
         // 调用fixedpng.js
         function invokeFixedPng(){
@@ -78,12 +80,14 @@
         //   IE6 下 inline-block vertical-align 中不是全文字，则无效；  
         // 4.IE6 下事件处理（参考 utils/base.js   EventUtil ）
         // 5.getAttribute("class") 在IE下可能无法获取正确类名， IE对应的应该为 getAttribute("className")
-        // 6.position absolute; 在IE6下无效；
+        //   另：IE下获得float的方式也不同：obj.style.styleFloat=style; （IE） obj.style.cssFloat=style; （非IE）
+        // 6.position absolute; 在IE6下 定位很容易出问题，给父类zoom:1; 触发layout解决；http://blog.csdn.net/wuchengzhi82/article/details/7730207
         // 7.IE6下 line-height 对应节点， 如果不是全文字的话（包含图片/input textarea/select等）会无效；
         // 8.IE6下 position:absolute; 如果父节点已经透明显示， 子类超出父节点部分会被隐藏（即使显示优先级 高于任何子节点）；
         // 9.IE6下 ；css 三角形需注意背景色、border-style, line-height; http://www.cnphp6.com/archives/63736
-        // 10.IE6下 ；margin 设置为负值无效， 父类添加zoom:1, 自身添加position：relative后方有效；
-      
+        // 10.IE6下 ；margin 设置为负值无效， 父类添加zoom:1, 自身添加position：relative后方有效；(仍然不行， 就添加 top:-XXpx; 实现)
+        // 11.IE6下 position: fixed; 无效；absolute替代实现；http://www.cnblogs.com/blosaa/archive/2011/12/29/2305990.html
+        
       </script>
 
     </body>
