滚动代码 优化新思路测试

--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
           </li>
 
           <li>
+            <p>20.浏览器缓存:</p>
+            <ul>
+              <li><a href="webStorage.html" target="_blank">webStorage.html</a></li>
+            </ul>
+          </li>
+
+          <li>
             <p>other:</p>
             <ul>
               <li><a href="others/renrenTest.html">人人网鄙视题</a></li>
