--- a/challenge_case/slide_optimize.html
+++ b/challenge_case/slide_optimize.html
@@ -73,12 +73,15 @@
                     }
                     if ( dataLen > 3 ){
                         clearTimeout(slideTimeOut);
-                        slideUp2();
+                        slideUp3();
                     }
                     // 关于 mouseover 与 mouseenter区别：http://www.cnblogs.com/kingwell/archive/2012/09/09/2677258.html
                     // mouseover mouseout 与 hover, 很多时候能用css解决 脚本实现的功能，性能更好且更好维护 http://www.cnblogs.com/aimyfly/archive/2012/05/04/2483123.html
                     $ulWrap.on('mouseover',  stopSlideUp);
                     $ulWrap.on('mouseleave', startSlideUp);
+
+                    // 文字左右滚动
+                    
                     // chrome 1 ~ 4
                     function slideUp(){
                         var $hadShowDom = '';
@@ -110,7 +113,6 @@
                             $hadShowDom = $ulWrap.find('li:lt(' + hadShowIndex + ')');
                             // 如果append的是自己子类，则移动其位置
                             $ulWrap.find('ul').append($hadShowDom);
-                            $hadShowDom.removeClass('had_show');
                             slideUp_count = 2;
                             $ulWrap.css('top', 0);
                             top = 0;
@@ -125,6 +127,32 @@
                             });
                         }, 5 * 1000);
                     }
+                    // 滚动代码优化
+                    function slideUp3(){
+                        var $hadShowDom = '', hadShowIndex;
+                        clearTimeout(slideTimeOut);
+                        // 当滚动到最后一组时切换 dom节点
+                        if ( slideUp_count >= dataLen - 2 ){
+                            hadShowIndex = dataLen - 2;
+                            // 将已向上移动的节点移动至最下面
+                            $hadShowDom = $ulWrap.find('li:lt(' + hadShowIndex + ')');
+                            // 如果append的是自己子类，则移动其位置
+                            $ulWrap.find('ul').append($hadShowDom);
+                            slideUp_count = 2;
+                            $ulWrap.css('top', 0);
+                            top = 0;
+                        }
+                        top -= 25*2;
+                        slideTimeOut = setTimeout(function(){
+                            $ulWrap.animate({
+                                'top': top
+                            }, 1000, function(){
+                                slideUp_count += 2;
+                                slideUp3();
+                            });
+                        }, 5 * 1000);
+                    }
+
                     // 停止滑动
                     function stopSlideUp(){
                         slideUp_mouseover = true;
@@ -138,9 +166,12 @@
                         clearTimeout(outTimeOut);
                         top = parseInt( $ulWrap.css('top'), 10);
                         outTimeOut = setTimeout(function(){
-                            slideUp2();
+                            slideUp3();
                         }, 500);
                     }
+                },
+                wordMove: function($wordWrap){
+
                 }
             };
             
