浏览器兼容、浏览器缓存测试代码提交

--- a/IESupport.html
+++ b/IESupport.html
@@ -87,6 +87,7 @@
         // 9.IE6下 ；css 三角形需注意背景色、border-style, line-height; http://www.cnphp6.com/archives/63736
         // 10.IE6下 ；margin 设置为负值无效， 父类添加zoom:1, 自身添加position：relative后方有效；(仍然不行， 就添加 top:-XXpx; 实现)
         // 11.IE6下 position: fixed; 无效；absolute替代实现；http://www.cnblogs.com/blosaa/archive/2011/12/29/2305990.html
+        // 12.IE6下 左浮动（或右浮动）如果是最后一个节点， 则会自动换行；http://www.wangmengyu.cn/?p=139
         
       </script>
 
