代码小改动

--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -94,6 +94,9 @@
           .t-padding-wrap2{ background-color:#ccc; padding:20px; height:100%; }
           .t-border-wrap2{ background-color:#ccc; border:5px solid #555; height:100%; }
           .t-margin-wrap2{ background-color:#ccc; margin:20px; height:100%; }
+
+          /*给div添加border 不占用宽度，例如原来是50%， 不想因为添加了brder导致div宽度大于50%; box-sizing IE8才开始支持（ie8 得加-ms前缀） */
+        
         </style>
 
     </head>
