--- a/challenge_case/slide_optimize.html
+++ b/challenge_case/slide_optimize.html
@@ -46,8 +46,34 @@
         <div class="n_b_bg"></div>
     </div>
 
+    <div class="box_wrap">
+        <div id="head_line_id2" class="head_line_mod">
+            <div class="normalHeadLine_div">
+                <ul>
+                    <li class="list" title="4.测试的一段小蚊子">4.测试的一段小蚊子...</li>
+                    <li class="list" title="5.测试的一段小蚊子">5.测试的一段小蚊子...</li>
+                    <li class="list" title="6.测试的一段小蚊子">6.测试的一段小蚊子...</li>
+                    <li class="list" title="7.测试的一段小蚊子">7.测试的一段小蚊子...</li>
+                    <li class="list" title="8.测试的一段小蚊子">8.测试的一段小蚊子...</li>
+                    <li class="list" title="9.测试的一段小蚊子">9.测试的一段小蚊子...</li>
+                    <li class="list" title="10.测试的一段小蚊子">10.测试的一段小蚊子...</li>
+                    <li class="list" title="11.测试的一段小蚊子">11.测试的一段小蚊子...</li>
+                    <li class="list" title="12.测试的一段小蚊子">12.测试的一段小蚊子...</li>
+                    <li class="list" title="13.测试的一段小蚊子">13.测试的一段小蚊子...</li>
+                    <li class="list" title="14.测试的一段小蚊子">14.测试的一段小蚊子...</li>
+                    <li class="list" title="15.测试的一段小蚊子">15.测试的一段小蚊子...</li>
+                    <li class="list" title="16.测试的一段小蚊子">16.测试的一段小蚊子...</li>
+                    <li class="list" title="17.测试的一段小蚊子">17.测试的一段小蚊子...</li>
+                    <li class="list" title="18.测试的一段小蚊子">18.测试的一段小蚊子...</li>
+                </ul>
+            </div>
+        </div>
+        <div class="n_b_bg"></div>
+    </div>
+
     <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
     <script type="text/javascript">
+        // 待添加 文字滚动功能
         $(function(){
             // 优化思路： http://developer.51cto.com/art/201504/473422.htm (尽量不操作、遍历 节点)
             // 自动滚动（每隔5秒向上滚动）效果，只有滚动条数大于3时滚动； 如片段太少， 节点拼接处理
@@ -73,15 +99,13 @@
                     }
                     if ( dataLen > 3 ){
                         clearTimeout(slideTimeOut);
-                        slideUp3();
+                        slideUp2();
                     }
                     // 关于 mouseover 与 mouseenter区别：http://www.cnblogs.com/kingwell/archive/2012/09/09/2677258.html
                     // mouseover mouseout 与 hover, 很多时候能用css解决 脚本实现的功能，性能更好且更好维护 http://www.cnblogs.com/aimyfly/archive/2012/05/04/2483123.html
                     $ulWrap.on('mouseover',  stopSlideUp);
                     $ulWrap.on('mouseleave', startSlideUp);
 
-                    // 文字左右滚动
-                    
                     // chrome 1 ~ 4
                     function slideUp(){
                         var $hadShowDom = '';
@@ -127,32 +151,6 @@
                             });
                         }, 5 * 1000);
                     }
-                    // 滚动代码优化
-                    function slideUp3(){
-                        var $hadShowDom = '', hadShowIndex;
-                        clearTimeout(slideTimeOut);
-                        // 当滚动到最后一组时切换 dom节点
-                        if ( slideUp_count >= dataLen - 2 ){
-                            hadShowIndex = dataLen - 2;
-                            // 将已向上移动的节点移动至最下面
-                            $hadShowDom = $ulWrap.find('li:lt(' + hadShowIndex + ')');
-                            // 如果append的是自己子类，则移动其位置
-                            $ulWrap.find('ul').append($hadShowDom);
-                            slideUp_count = 2;
-                            $ulWrap.css('top', 0);
-                            top = 0;
-                        }
-                        top -= 25*2;
-                        slideTimeOut = setTimeout(function(){
-                            $ulWrap.animate({
-                                'top': top
-                            }, 1000, function(){
-                                slideUp_count += 2;
-                                slideUp3();
-                            });
-                        }, 5 * 1000);
-                    }
-
                     // 停止滑动
                     function stopSlideUp(){
                         slideUp_mouseover = true;
@@ -166,16 +164,86 @@
                         clearTimeout(outTimeOut);
                         top = parseInt( $ulWrap.css('top'), 10);
                         outTimeOut = setTimeout(function(){
-                            slideUp3();
+                            slideUp2();
+                        }, 500);
+                    }
+                }
+            };
+
+            var slideObj2 = {
+                $headLineWrap:null,
+                init: function(){
+                   this.$headLineWrap = $('#head_line_id2');
+                   this.initEvt();
+                },
+                initEvt:function(){
+                    var $ulWrap = this.$headLineWrap.find('.normalHeadLine_div'),
+                        dataLen = $ulWrap.find('li').length,
+                        top = 0,
+                        slideUp_count = 3,
+                        slideTimeOut,
+                        slideUp_mouseover,
+                        outTimeOut;
+
+                    // 节点不够自动拼凑
+                    if(dataLen == 4 || dataLen == 5) {
+                        $ulWrap.find('li:lt(2)').clone().appendTo($ulWrap.find('ul'));
+                    }
+                    if ( dataLen > 3 ){
+                        clearTimeout(slideTimeOut);
+                        slideUp();
+                    }
+                    // 关于 mouseover 与 mouseenter区别：http://www.cnblogs.com/kingwell/archive/2012/09/09/2677258.html
+                    // mouseover mouseout 与 hover, 很多时候能用css解决 脚本实现的功能，性能更好且更好维护 http://www.cnblogs.com/aimyfly/archive/2012/05/04/2483123.html
+                    $ulWrap.on('mouseover',  stopSlideUp);
+                    $ulWrap.on('mouseleave', startSlideUp);
+
+                    // 滚动代码优化
+                    function slideUp(){
+                        var $hadShowDom = '', hadShowIndex;
+                        clearTimeout(slideTimeOut);
+                        // 当滚动到最后一组时切换 dom节点
+                        if ( slideUp_count >= dataLen - 2 ){
+                            hadShowIndex = dataLen - 5;
+                            // 将已向上移动的节点移动至最下面
+                            $hadShowDom = $ulWrap.find('li:lt(' + hadShowIndex + ')');
+                            // 如果append的是自己子类，则移动其位置
+                            $ulWrap.find('ul').append($hadShowDom);
+                            slideUp_count = 3;
+                            $ulWrap.css('top', 0);
+                            top = 0;
+                        }
+                        top -= 25*2;
+                        slideTimeOut = setTimeout(function(){
+                            $ulWrap.animate({
+                                'top': top
+                            }, 1000, function(){
+                                slideUp_count += 2;
+                                slideUp();
+                            });
+                        }, 5 * 1000);
+                    }
+                    // 停止滑动
+                    function stopSlideUp(){
+                        slideUp_mouseover = true;
+                        if (slideTimeOut) {
+                            clearTimeout(slideTimeOut);
+                        }
+                    }
+                    // 开始滑动
+                    function startSlideUp(){
+                        slideUp_mouseover = false;
+                        clearTimeout(outTimeOut);
+                        top = parseInt( $ulWrap.css('top'), 10);
+                        outTimeOut = setTimeout(function(){
+                            slideUp();
                         }, 500);
                     }
                 },
-                wordMove: function($wordWrap){
-
-                }
             };
             
             slideObj.init();
+            slideObj2.init();
         });
     </script>
 </body>
