--- a/webStorage.html
+++ b/webStorage.html
@@ -42,7 +42,6 @@
       </p>
       <br/>
 
-
       <p>
         2.浏览器缓存：cookie 用法(需在虚拟服务器运行， 放在tomcat根目录下)；
         <input type="button" value="点击存入缓存" id="cSetBtn"/>
@@ -53,13 +52,14 @@
         <span id="cBtnTips"></span>
       </p>
 
-
       <!-- 引入公用自定义文件，其包含cookie封装对象 -->
       <script type="text/javascript" src="utils/cookieUtil.js"></script>
       <script>
         // 不是很准确的总结： 
         // 1.localStorage、sessionStorage 是html5 规范，IE8就支持了，不同浏览器总大小不同，大概为5MB； 
         // 2.cookie 比较老的缓存实现方式，不同浏览器支持的cookie 个数跟容量不同，容量大概4K;（http://www.cnblogs.com/henryhappier/archive/2011/03/03/1969564.html）
+        // 3.webSql HTML5新增缓存机制，IE所有版本（包括edge） firefox均不支持， PC端目前基本无法投入使用；http://www.cnblogs.com/chuncn/archive/2010/11/22/1884783.html 
+        // 4.IndexDb HTML5规范的另一缓存机制， 浏览器支持情况比web sql好一些； IE10(edge14仍是部分支持)开始部分支持， firefox、chrome、Opera全支持、safari8开始部分支持；实际开发同上，暂时鸡肋；
 
         var xq = {};
         init();
