--- a/webStorage.html
+++ b/webStorage.html
@@ -204,6 +204,16 @@
           }
         }
 
+        // web sql 模块
+        function initWebSql(){
+          
+        }
+
+        // indexDb 模块
+        function initIndexDb(){
+          
+        }
+
       </script>
 
     </body>
