--- a/function.html
+++ b/function.html
@@ -103,8 +103,8 @@
             // return new Function('with (this) { return ' + expr + ' }').call(d); 
             return (new Function(imports + 'return (' + expr + ')')).call(d)
           }
-          alert( evalWith(d, expr) );
-
+          // alert( evalWith(d, expr) );
+          
         </script>
 
     </body>
