--- a/closureUse.html
+++ b/closureUse.html
@@ -109,6 +109,17 @@
             }
           }
 
+          // 闭包理解, 局部变量i, 匿名函数何时被销毁？
+          var a = function () {
+            var i = 0;
+            return function() {
+              return ++i;
+            }
+          };
+          var b = a();
+          // alert( b() );
+          // alert(i); // i not defined
+          
         </script>
 
     </body>
