首页跳转方式改动

--- a/canvas.html
+++ b/canvas.html
@@ -6,8 +6,9 @@
             canvas简单用法
         </title>
         <link rel="stylesheet" type="text/css" href="common.css" />
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <style>
-          
           .clear-btn{ background-color:#93B5EC; }
           .clear-btn:hover{ background-color:#8080FF; }
           .canvas{ height:500px; width: 800px; }
@@ -18,9 +19,7 @@
           .gray-btn{ position: absolute; top:560px; left:300px; }
           /*合成样式*/
           .comp-list{ position: absolute; top: 360px; left: 20px; }
-
         </style>
-
     </head>
     
     <body>
