--- a/timer(jq).html
+++ b/timer(jq).html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title>
-            计时器
+          计时器
         </title>
-
         <style>
-            .bg{ background-color:#ff4a00; height:100px; color:#FFF; font-size:14px; margin:10px 0px 0px 0px;}
-            .time-val{color:'#fff';font-size:30px;}
-            .count_down{ font-size:20px; line-height: 100px; width:100px; margin:0 auto; text-align: center; }
+          .bg{ background-color:#ff4a00; height:100px; color:#FFF; font-size:14px; margin:10px 0px 0px 0px;}
+          .time-val{color:'#fff';font-size:30px;}
+          .count_down{ font-size:20px; line-height: 100px; width:100px; margin:0 auto; text-align: center; }
         </style>
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
