--- a/isTrusted.html
+++ b/isTrusted.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
     <title>测试用户点击和js点击</title>
     <script src='lib/jquery-1.10.2.min.js'></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <button id="btn">Click</button>
