--- a/webStorage.html
+++ b/webStorage.html
@@ -73,9 +73,11 @@
         // 1.localStorage、sessionStorage 是html5 规范，IE8就支持了，不同浏览器总大小不同，大概为5MB； 
         // 2.cookie 比较老的缓存实现方式，不同浏览器支持的cookie 个数跟容量不同，容量大概4K;（http://www.cnblogs.com/henryhappier/archive/2011/03/03/1969564.html）
         // 3.webSql HTML5新增缓存机制，IE所有版本（包括edge） firefox均不支持， PC端目前基本无法投入使用；http://dev.w3.org/html5/webdatabase/?cm_mc_uid=87151019066814486820761&cm_mc_sid_50200000=1448682076#introduction
-        // 4.IndexDb HTML5规范的另一缓存机制， 浏览器支持情况比web sql好一些； IE10(edge14仍是部分支持)开始部分支持， firefox、chrome、Opera全支持、safari8开始部分支持；实际开发同上，暂时鸡肋；
+        // 4.IndexDb HTML5规范的另一缓存机制， 浏览器支持情况比websql好一些； IE10(edge14仍是部分支持)开始部分支持， firefox、chrome、Opera全支持、safari8开始部分支持；实际开发同上，暂时鸡肋；http://rainsilence.iteye.com/blog/984569
 
+        // 全局变量，可以将需要暴露的方法放置其中
         var xq = {};
+
         init();
 
         function init() {
