浏览器缓存添加浏览器兼容代码

--- a/index.html
+++ b/index.html
@@ -10,18 +10,12 @@
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
       <style>
-        .markdown-body{
-          background-color: #fff;
-          border: 1px solid #ddd;
-          border-bottom-left-radius: 3px;
-          border-bottom-right-radius: 3px;
-          padding: 30px;
-          word-wrap: break-word;
-        }
+        .markdown-body{ background-color: #fff; border: 1px solid #ddd; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; padding: 30px; word-wrap: break-word; }
       </style>
     </head>
     
     <body> 
+    
       <div class="markdown-body">
         <h3><a id="user-content-前端代码集合" class="anchor" href="#前端代码集合" aria-hidden="true"><span class="octicon octicon-link"></span></a>前端代码集合</h3>
         <ul>
@@ -192,8 +186,8 @@
               <li><a href="http://wteamxq.com/testDemo/angular/angularRoute.html" target="_blank">演示地址</a></li>
             </ul>
           </li>
-
         </ul>
       </div>
+
     </body>
 </html>
