演示html， 网页选项卡小图标添加

--- a/IESupport.html
+++ b/IESupport.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <heade>
+    <head>
       <title>
-          低版本浏览器兼容相关
+        低版本浏览器兼容相关
       </title>
       <meta name="renderer" content="webkit">
       <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
       <meta http-equiv="content-type" content="charset=utf-8">
       <!-- <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script> -->
       <!--[if lt IE 7]>
-            <script type="text/javascript" src="lib/unitpngfix/unitpngfix.js"></script>
+        <script type="text/javascript" src="lib/unitpngfix/unitpngfix.js"></script>
       <![endif]--> 
-
       <!-- IE6 png透明最佳实现库// <script type="text/javascript" src="lib/fixedpng.js"></script> -->
       <script type="text/javascript" src="utils/client.js"></script>
       <style>
@@ -22,7 +21,7 @@
       </style>
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    </heade>
+    </head>
     
     <body>
       <h3>低版本浏览器兼容相关</h3>
