--- a/ajax.html
+++ b/ajax.html
@@ -3,13 +3,15 @@
     <head>
       <meta charset="utf-8">
       <title>
-          ajax用法
+        ajax用法
       </title>
       <link rel="stylesheet" type="text/css" href="./common.css" />
       <style>
         .res-cont{ border:2px solid #becceb; padding: 10px; }
         #tForm{ margin: 20px 10px; }
       </style>
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
