--- a/angular/angularRoute.html
+++ b/angular/angularRoute.html
@@ -6,6 +6,8 @@
         理解angualarjs 路由机制
       </title>
       <link rel="stylesheet" type="text/css" href="../common.css"/>
+      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
       <style>
         #content{
           border:5px solid blue;
