--- a/cssFlexBox.html
+++ b/cssFlexBox.html
@@ -126,6 +126,8 @@
           flex: 1;
         }
       </style>
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
