--- a/dragDrop.html
+++ b/dragDrop.html
@@ -6,16 +6,11 @@
         </title>
         <!-- <link type="text/css" rel="stylesheet" href="xxx.css"> -->
         <style type="text/css">
-            .draggable{
-                position: absolute;
-                background:red;
-                width: 200px;
-                height: 200px;
-            }
-            .status{
-                margin-top: 200px;
-            }
+            .draggable{ position: absolute; background:red; width: 200px; height: 200px; }
+            .status{ margin-top: 200px; }
         </style>
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
@@ -109,8 +104,6 @@
           }
           // 赋予拖动事件 参数1：移动Dom id 参数2：拖动提示内容
           useDrag("dragDom", "status");
-
         </script>
-
     </body>
 </html>
