--- a/event.html
+++ b/event.html
@@ -7,11 +7,10 @@
         </title>
         <link rel="stylesheet" type="text/css" href="common.css"/>
         <style>
-          .demo1{
-            display: none;
-          }
+          .demo1{ display: none; }
         </style>
-
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
@@ -121,7 +120,6 @@
             }
           }
           testWindowResize();
-
         </script>
 
     </body>
