--- a/nodeOperate.html
+++ b/nodeOperate.html
@@ -6,6 +6,8 @@
         原生js 节点操作
     </title>
     <link rel="stylesheet" href="common.css" type="text/css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <style>
       #btnList{
         margin: 20px 0px 0px;
