--- a/others/mditorDemo.html
+++ b/others/mditorDemo.html
@@ -3,11 +3,12 @@
     <head>
       <meta charset="utf-8">
       <title>
-          剧中人markdown 编辑器
+        剧中人markdown 编辑器
       </title>
       <style>
-        
       </style>
+      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
