--- a/others/renrenTest.html
+++ b/others/renrenTest.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            人人网笔试题
+          人人网笔试题
         </title>
         <!--[if lt IE 9]>
         <script src="../script/base.js"></script>
@@ -265,6 +265,8 @@
             padding: 10px;
           }
         </style>
+        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
