--- a/others/zxxAutoComplete.html
+++ b/others/zxxAutoComplete.html
@@ -10,6 +10,8 @@
         .emailist li{padding:2px 11px; cursor:pointer;}
         .emailist .on, .emailist li:hover{background-color:#eee;}
       </style>
+      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
