--- a/regexp.html
+++ b/regexp.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>
-            正则表达式使用
+          正则表达式使用
         </title>
-
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
         <h3>正则表达式使用</h3>
-        
         <script>
           var str = '';
           // 校验邮箱
