--- a/scope.html
+++ b/scope.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>
-            作用域理解
+          作用域理解
         </title>
-
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
@@ -114,8 +115,6 @@
             obj.method(fn, 1); //根据第四步判断，得出this指向arguments对象
           }
           test3();
-
         </script>
-
     </body>
 </html>
