--- a/array.html
+++ b/array.html
@@ -17,6 +17,8 @@ http://www.w3.org/TR/html4/strict.dtd">
       <script src="lib/syntax_highlighter/brush.js" type="text/javascript"></script>
       <link rel="stylesheet" type="text/css" href="lib/syntax_highlighter/shCore.css" />
       <link rel="stylesheet" type="text/css" href="lib/syntax_highlighter/shThemeDefault.css" />
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
