--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -96,9 +96,9 @@
           .t-margin-wrap2{ background-color:#ccc; margin:20px; height:100%; }
 
           /*给div添加border 不占用宽度，例如原来是50%， 不想因为添加了brder导致div宽度大于50%; box-sizing IE8才开始支持（ie8 得加-ms前缀） */
-        
         </style>
-
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
