--- a/function.html
+++ b/function.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>
-            函数理解
+          函数理解
         </title>
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
