--- a/others/slideImg.html
+++ b/others/slideImg.html
@@ -46,7 +46,8 @@
           cursor: pointer;
         }
       </style>
-
+      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
