--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             <p>19.浏览器兼容:</p>
             <ul>
               <li><a href="IESupport.html" target="_blank">IESupport.html</a></li>
+              <li><a href="http://wteamxq.com/testDemo/IESupport.html" target="_blank">演示地址</a></li>
             </ul>
           </li>
 
