--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -96,6 +96,10 @@
           .t-margin-wrap2{ background-color:#ccc; margin:20px; height:100%; }
 
           /*给div添加border 不占用宽度，例如原来是50%， 不想因为添加了brder导致div宽度大于50%; box-sizing IE8才开始支持（ie8 得加-ms前缀） */
+        
+          /*...样式实现，兼容IE6+，火狐下显示有点小问题*/
+          .text_overflow{width:27em; white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden;}
+
         </style>
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -112,6 +116,7 @@
         <button id="tBtn6" data-id="test6" class="radius-btn">css三角形</button>
         <button id="tBtn7" data-id="test7" class="radius-btn">两端对齐</button>
         <button id="tBtn8" data-id="test8" class="radius-btn">盒子宽度实验</button>
+        <button id="tBtn9" data-id="test9" class="radius-btn">...样式实现</button>
       </div>
 
       <div id='test1' class="demo demo2">
@@ -187,8 +192,7 @@
         <div class="u_face">
             <img id="uFace" src="images/dlam.jpg">
             <div class="u-face-pop" id="uFacePop">
-              <p>hi, 逗比</p>
-              <p>以大部分人努力程度之低，根本轮不到拼天赋。。。</p>
+              <p>分手时，她给了我一个吻，那感觉——就好像人民日报一样真实…… </p>
               <div class="triangle-ico"></div>
             </div>
         </div>
@@ -217,7 +221,14 @@
         <div class="t-w-parent">
           <div class="t-margin-wrap2">adf</div>
         </div>
+      </div>
 
+      <div id="test9" class="demo">
+        <h3>..样式实现，兼容IE6+，火狐下显示有点小问题</h3>
+        <h4>原文：</h4>
+        <div>...样式实现原理，1.固定长度(width)；2.强制文字在一行显示(white-space)；3.超出部分截取(overflow)；4.文字超出部分添加...;(text-overflow)</div>
+        <h4>调用样式后文本：</h4>
+        <div class="text_overflow" title="...样式实现原理，1.固定长度(width)；2.强制文字在一行显示(white-space)；3.超出部分截取(overflow)；4.文字超出部分添加...;(text-overflow)">...样式实现原理，1.固定长度(width)；2.强制文字在一行显示(white-space)；3.超出部分截取(overflow)；4.文字超出部分添加...;(text-overflow)</div>
       </div>
       
       <script src="utils/base.js" type="text/javascript"></script>
