--- a/webStorage.html
+++ b/webStorage.html
@@ -83,8 +83,8 @@
         // 1.localStorage、sessionStorage 是html5 规范，IE8就支持了，不同浏览器总大小不同，大概为5MB； 
         // 2.cookie 比较老的缓存实现方式，不同浏览器支持的cookie 个数跟容量不同，容量大概4K;（http://www.cnblogs.com/henryhappier/archive/2011/03/03/1969564.html）
         // 3.webSql HTML5新增缓存机制，IE所有版本（包括edge） firefox均不支持， PC端目前基本无法投入使用；http://dev.w3.org/html5/webdatabase/?cm_mc_uid=87151019066814486820761&cm_mc_sid_50200000=1448682076#introduction
-        // 4.IndexDb HTML5规范的另一缓存机制， 浏览器支持情况比websql好一些； IE10(edge14仍是部分支持)开始部分支持， firefox、chrome、Opera全支持、safari8开始部分支持；实际开发同上，暂时鸡肋；http://rainsilence.iteye.com/blog/984569
-
+        // 4.IndexDb HTML5规范的另一缓存机制， 浏览器支持情况比websql好一些； IE10(edge14仍是部分支持)开始部分支持， firefox、chrome、Opera全支持、safari8开始部分支持；实际开发同上，暂时鸡肋；
+        //   http://rainsilence.iteye.com/blog/984569(更详细的资料) (db.setVersion方法已被弃用) http://www.tfan.org/no-setversion-now-onupgradeneeded/
         // 全局变量，可以将需要暴露的方法放置其中
         var xq = {};
 
@@ -307,44 +307,36 @@
           //数据库名称
           var dbName = "H5AppDB",
               //数据库版本 
-              dbVersion = 2.0,
+              dbVersion = 3,
               //表名 
               tablename = "todo", 
               //indexDb数据库对象
               indexDbObj = {},
-              //实例化IndexDB数据上下文，这边根据浏览器类型来做选择
+              //实例化IndexDB数据上下文，根据浏览器类型来做选择
               indexedDB = null;
 
           try {
             indexedDB = window.indexedDB || window.webkitIndexedDB ||window.mozIndexedDB;
             if ('webkitIndexedDB' in window) {
-              window.IDBTransaction = window.webkitIDBTransaction;
-              window.IDBKeyRange = window.webkitIDBKeyRange;
+              window.IDBTransaction = window.IDBTransaction;
+              window.IDBKeyRange = window.IDBKeyRange;
             }
-            indexedDB.open = function (){
-              var request = indexedDB.open(dbName, dbVersion);
-              request.onsuccess = function(e){
-                var _request;
-                indexDbObj = e.target.result;
-                if (indexDbObj.version != dbVersion) {
-                  _request = indexDbObj.setVersion(dbVersion);
-                  _request.onsuccess = function(){
-                    var _trans = _request.result;
-                    if ( indexDbObj.objectStoreNames.contains(tablename) ) {
-                      indexDbObj.deleteObjectStore(tablename);
-                    }
-                    indexDbObj.createObjectStore(tablename, { keyPath: "timeStamp" });
-                    _trans.oncomplete = function (e) {
-                      // 初始化数据库成功！
-                      iSetBtn.onclick = indexDbSetItem;
-                      iShowBtn.onclick = showIndexDb;
-                      iRemoveBtn.onclick = indexDbRemoveItem;
-                    }
-                  }
-                }
-              }
-            } // end of open
-            
+            // 打开indexDb数据库
+            var request = indexedDB.open(dbName, dbVersion);
+            request.onupgradeneeded = function() {
+              var store = event.currentTarget.result.createObjectStore(tablename, {keyPath: "indexId"});
+            }
+
+            request.onsuccess = function(e){
+              var _request;
+              indexDbObj = request.result;
+              // 初始化数据库成功！
+              iSetBtn.onclick = indexDbSetItem;
+              iShowBtn.onclick = showIndexDb;
+              iRemoveBtn.onclick = indexDbRemoveItem;
+            }
+
+            request.onfailure = indexError;
           }catch(e) {
             iBtnTips.innerHTML = '浏览器不支持indexDb';
             iSetBtn.style.display = 'none';
@@ -357,16 +349,57 @@
           }
           // 插入缓存
           function indexDbSetItem(){
+            var trans = indexDbObj.transaction([tablename], "readwrite"),
+                store = trans.objectStore(tablename),
+                newArray = ["wteamxq","151201"];
+
+            //数据以对象形式保存，体现NoSQL类型数据库的灵活性
+            var data = {
+                "text": "xq sb",
+                "indexId": "1",
+                "obj":newArray                         
+            };
+            var request = store.put(data);//保存数据
+            request.onsuccess = function (e) {
+              iBtnTips.innerHTML = "indexDb 插入数据成功！";
+            };
+            request.onerror = indexError;
           }
+
           // 删除缓存
           function indexDbRemoveItem(){
+            var trans = indexDbObj.transaction([tablename], "readwrite"),
+                store = trans.objectStore(tablename),
+                request = store.delete("1");//根据主键来删除
+            request.onsuccess = function(e) {
+              iBtnTips.innerHTML = "indexDb 删除数据成功！";
+            };
+            request.onerror = indexError;
           }
+
           // 查询缓存(回调函数 方便扩展)
           function showIndexDb(searchCb) {
-          }
+            //通过事物开启对象
+            var trans = indexDbObj.transaction([tablename], "readwrite"),
+                //获取到对象的值
+                store = trans.objectStore(tablename),
+                // Get everything in the store;
+                keyRange = IDBKeyRange.lowerBound(0),
+                //开启索引为0的表
+                cursorRequest = store.openCursor(keyRange);
+            cursorRequest.onsuccess = function (e) {
+              var result = e.target.result;
+              if (!!result == false) {
+                return false;
+              }
+              iBtnTips.innerHTML = result.value;
+              //轮询读取
+              result.continue();
+            };
+            cursorRequest.onerror = indexError;
+          }// end of showIndexDb
         }
 
       </script>
-
     </body>
 </html>
